Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36818

Converting RGBA QImage to QMacMime doesn't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0 Beta1
    • 5.2.0
    • GUI: Painting
    • None
    • a4080e47194754d717718b00f63c5f7326bf269d

      The cocoa plugin currently assumes all 32bit image formats are ARGB formated, causing RGBA formats to be handled incorrectly.

        For Gerrit Dashboard: QTBUG-36818
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes